// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with icon chosen in cms 1`] = `
.c1 {
  position: relative;
  clear: both;
  background: #f7f7f7;
  padding: 20px;
  margin-bottom: 1em;
  border-left: 4px solid;
  border-color: #ea232d;
}

.c3 {
  display: inline-block;
}

.c3 > :last-child {
  margin-bottom: 0;
}

.c2 {
  fill: #212122;
  width: 30px;
  height: 30px;
  margin-right: 1em;
  display: inline-block;
  vertical-align: top;
}

.c2 + div {
  width: calc(100% - 3em);
}

.c0 {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="isvg loading c2"
    />
    <div
      className="c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Our advice and support services across the UK give people <b>one-to-one</p>",
        }
      }
    />
  </div>
</div>
`;

exports[`renders correctly with no options chosen in cms 1`] = `
.c1 {
  position: relative;
  clear: both;
  background: #f7f7f7;
  padding: 20px;
  margin-bottom: 1em;
  border-left: 4px solid;
  border-color: #ea232d;
}

.c3 {
  display: inline-block;
}

.c3 > :last-child {
  margin-bottom: 0;
}

.c2 {
  fill: #212122;
  width: 30px;
  height: 30px;
  margin-right: 1em;
  display: inline-block;
  vertical-align: top;
}

.c2 + div {
  width: calc(100% - 3em);
}

.c0 {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="isvg failed c2"
    />
    <div
      className="c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Our advice and support services across the UK give people <b>one-to-one</p>",
        }
      }
    />
  </div>
</div>
`;
